--- a/css/carousel.css
+++ b/css/carousel.css
@@ -28,7 +28,7 @@
     border: 20px solid #f5f5f5;
     margin: 0;
     /*margin-top: 20px;*/
-    right:34px;
+    right:2px;
 }
 
 .slide {
@@ -51,15 +51,15 @@
 }
 
 .arrow.prev {
-    opacity: 0.2;
-    left: 5px;
+    opacity: 0.5;
+    left: -48px;
     background-image: url(../img/paddle_prev_999.png);
     transition: 0.2s linear all;
 }
 
 .arrow.next {
-    opacity: 0.2;
-    right: -60px;
+    opacity: 0.5;
+    right: -112px;
     background-image: url(../img/paddle_next_999.png);
     transition: 0.2s linear all;
 }
@@ -67,15 +67,15 @@
 .arrow.prev.home {
     position: absolute;
     opacity: 1;
-    left: 11px;
-    top: 47em;
+    left: -17px;
+    top: 46em;
 }
 
 .arrow.next.home {
     position: absolute;
     opacity: 1;
-    right: 14px;
-    top: 47em;
+    right: -17px;
+    top: 46em;
 }
 
 .arrow.prev:hover {
